--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/cdk": "^17.3.9",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.2.0",
     "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.2.0",
